Changelog
=========

3.0b9 - Unreleased
------------------

- Fixed functional tests to avoid an extraneous slash in the URL.
  [hannosch]

- Added a new I18NOnlyBaseBTreeFolder mix-in, which can be used in Plone 4 to
  give LinguaPlone behavior to the new plone.app.folder types.
  [hannosch]

- Avoid deprecation warnings for the use of the Globals package.
  [hannosch]

3.0b8 - 2009-10-22
------------------

- Adjusted the language selector to point to the nearest translation for each
  language. So far the selector only worked on items which had translations
  into all languages. Otherwise the content language negotiator would render
  the selector useless. This closes
  http://plone.org/products/linguaplone/issues/219.
  [hannosch]

- Fixed the language selector to work directly on the root in a virtual hosting
  environment. This closes http://plone.org/products/linguaplone/issues/216.
  [hannosch]

- Expanded the development buildout to include a simple Nginx configuration to
  make it easier to test virtual hosting issues.
  [hannosch]

- Changed the language selector to use the canonical_object_url instead of the
  view_url. We preserve the /view postfix ourselves, so using view_url would
  duplicate this in certain situations. We also stopped doing the default page
  analysis ourselves and use the given feature from the context state view.
  [hannosch]

3.0b7 - 2009-10-21
------------------

- Protect the LanguageIndependentFields adapter against weird fields, like
  computed fields.
  [hannosch]

3.0b6 - 2009-10-20
------------------

- Avoid preserving the mysterious `-C` in the language selector.
  [hannosch]

- Made sure that subclasses of fields listed in I18NAWARE_REFERENCE_FIELDS
  also get the special reference handling. Otherwise schemaextender fields
  won't get the behavior.
  [hannosch]

- Let the `generatedMutatorWrapper` work directly on schemaextender fields.
  [hannosch]
